evaluation/test_suite/positive/ub36/3.c
#include <stdio.h>

static void f(void*);

void f(void* p)
{
    printf("%d\n", *(int*)p);
}

int main()
{
    double x = 1.2;
    f(&x);
}
