evaluation/test_suite/negative/ub36/3.c
#include <stdio.h>

static void f(void*);

void f(void* p)
{
    printf("%d\n", *(int*)p);
}

int main()
{
    unsigned int x = 0xffffffffU;
    f(&x);
}
